# openEMS-Calc

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
include/: MSL_Losses.h  RCS_Sphere.h
src/: emscalc.cpp
